<?xml version="1.0"?>
<package>
  <name>zaryabot_action</name>
  <version>0.0.1</version>

  <description>
    The zaryabot Action package provides all Mission action for TDK competition.
  </description>

  <maintainer email="a0919958057@gmail.com">YE Cheng-Wei</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/a0919958057/tdk-zarya-robot/wiki</url>
  <url type="repository">https://github.com/a0919958057/tdk-zarya-robot</url>
  <url type="bugtracker">https://github.com/a0919958057/tdk-zarya-robot/issues</url>

  <author email="a0919958057@gmail.com">YE Cheng-Wei</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>zaryabot_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>zaryabot_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib</run_depend>

  <export>
  </export>
</package>
