<?xml version="1.0"?>
<package>
  <name>zaryabot_description</name>
  <version>0.0.1</version>

  <description>
    The zaryabot_description package a complete 3D model of the ZaryaBot for simulation and visualization.
  </description>

  <maintainer email="a0919958057@gmail.com">YE Cheng-Wei</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/a0919958057/tdk-zarya-robot/wiki</url>
  <url type="repository">https://github.com/a0919958057/tdk-zarya-robot</url>
  <url type="bugtracker">https://github.com/a0919958057/tdk-zarya-robot/issues</url>

  <author email="a0919958057@gmail.com">YE Cheng-Wei</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>robot_state_publisher</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
