<?xml version="1.0"?>
<package>
  <name>zaryabot_msgs</name>
  <version>0.0.1</version>

  <description>
    The zaryabot Message package provides all message for ZaryaBot.
  </description>

  <maintainer email="a0919958057@gmail.com">YE Cheng-Wei</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/a0919958057/tdk-zarya-robot/wiki</url>
  <url type="repository">https://github.com/a0919958057/tdk-zarya-robot</url>
  <url type="bugtracker">https://github.com/a0919958057/tdk-zarya-robot/issues</url>

  <author email="a0919958057@gmail.com">YE Cheng-Wei</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
